seaqt/QtCore/gen_qdatetime.h

class QCalendar;
class QDate;
class QDateTime;
class QTimeZone;
typedef struct QCalendar QCalendar;
typedef struct QDate QDate;
typedef struct QDateTime QDateTime;
typedef struct QTime QTime;
typedef struct QTimeZone QTimeZone;
QDateTime* QDateTime_new();
QDateTime* QDateTime_new_date_time_spec(QDate* date, QTime* time, int spec);
QDateTime* QDateTime_new_date_time_timeZone(QDate* date, QTime* time, QTimeZone* timeZone);
QDateTime* QDateTime_new_date_time(QDate* date, QTime* time);
QDateTime* QDateTime_new_from(QDateTime* from);
QDateTime* QDateTime_new_date_time_spec_offsetSeconds(QDate* date, QTime* time, int spec, int offsetSeconds);
QDateTime* QDateTime_new_date_time_timeZone_resolve(QDate* date, QTime* time, QTimeZone* timeZone, int resolve);
QDateTime* QDateTime_new_date_time_resolve(QDate* date, QTime* time, int resolve);
long long QDateTime_msecsTo(const QDateTime* self, QDateTime* param1);
QDateTime* QDateTime_currentDateTime_zone(QTimeZone* zone);
QDateTime* QDateTime_currentDateTime();
QDateTime* QDateTime_currentDateTimeUtc();
QDateTime* QDateTime_fromString_QString(struct seaqt_string string);
QDateTime* QDateTime_fromString_QString_QString_QCalendar(struct seaqt_string string, struct seaqt_string format, QCalendar* cal);
QDateTime* QDateTime_fromString_QString_QString(struct seaqt_string string, struct seaqt_string format);
QDateTime* QDateTime_fromString_QString_QString_int_QCalendar(struct seaqt_string string, struct seaqt_string format, int baseYear, QCalendar* cal);
QDateTime* QDateTime_fromMSecsSinceEpoch_msecs_spec(long long msecs, int spec);
QDateTime* QDateTime_fromSecsSinceEpoch_secs_spec(long long secs, int spec);
QDateTime* QDateTime_fromMSecsSinceEpoch_msecs_timeZone(long long msecs, QTimeZone* timeZone);
QDateTime* QDateTime_fromSecsSinceEpoch_secs_timeZone(long long secs, QTimeZone* timeZone);
QDateTime* QDateTime_fromMSecsSinceEpoch_msecs(long long msecs);
QDateTime* QDateTime_fromSecsSinceEpoch_secs(long long secs);
long long QDateTime_currentMSecsSinceEpoch();
long long QDateTime_currentSecsSinceEpoch();
void QDateTime_setDate_date_resolve(QDateTime* self, QDate* date, int resolve);
void QDateTime_setTime_time_resolve(QDateTime* self, QTime* time, int resolve);
void QDateTime_setTimeZone_toZone_resolve(QDateTime* self, QTimeZone* toZone, int resolve);
struct seaqt_string QDateTime_toString_Qt_DateFormat(const QDateTime* self, int format);
QDateTime* QDateTime_fromString_QString_Qt_DateFormat(struct seaqt_string string, int format);
QDateTime* QDateTime_fromString_QString_QString_int(struct seaqt_string string, struct seaqt_string format, int baseYear);
QDateTime* QDateTime_fromMSecsSinceEpoch_msecs_spec_offsetFromUtc(long long msecs, int spec, int offsetFromUtc);
QDateTime* QDateTime_fromSecsSinceEpoch_secs_spec_offsetFromUtc(long long secs, int spec, int offsetFromUtc);