seaqt/QtCore/gen_qdatetime.nim

proc fcQDateTime_msecsTo(self: pointer, param1: pointer): clonglong {.importc: "QDateTime_msecsTo".}
proc fcQDateTime_currentDateTimeZone(zone: pointer): pointer {.importc: "QDateTime_currentDateTime_zone".}
proc fcQDateTime_currentDateTime(): pointer {.importc: "QDateTime_currentDateTime".}
proc fcQDateTime_currentDateTimeUtc(): pointer {.importc: "QDateTime_currentDateTimeUtc".}
proc fcQDateTime_fromString_QString(stringVal: struct_seaqt_string): pointer {.importc: "QDateTime_fromString_QString".}
proc fcQDateTime_fromString_QString_QString_QCalendar(stringVal: struct_seaqt_string, format: struct_seaqt_string, cal: pointer): pointer {.importc: "QDateTime_fromString_QString_QString_QCalendar".}
proc fcQDateTime_fromString_QString_QString(stringVal: struct_seaqt_string, format: struct_seaqt_string): pointer {.importc: "QDateTime_fromString_QString_QString".}
proc fcQDateTime_fromString_QString_QStringInt_QCalendar(stringVal: struct_seaqt_string, format: struct_seaqt_string, baseYear: cint, cal: pointer): pointer {.importc: "QDateTime_fromString_QString_QString_int_QCalendar".}
proc fcQDateTime_fromMSecsSinceEpochMsecsSpec(msecs: clonglong, spec: cint): pointer {.importc: "QDateTime_fromMSecsSinceEpoch_msecs_spec".}
proc fcQDateTime_fromSecsSinceEpochSecsSpec(secs: clonglong, spec: cint): pointer {.importc: "QDateTime_fromSecsSinceEpoch_secs_spec".}
proc fcQDateTime_fromMSecsSinceEpochMsecsTimeZone(msecs: clonglong, timeZone: pointer): pointer {.importc: "QDateTime_fromMSecsSinceEpoch_msecs_timeZone".}
proc fcQDateTime_fromSecsSinceEpochSecsTimeZone(secs: clonglong, timeZone: pointer): pointer {.importc: "QDateTime_fromSecsSinceEpoch_secs_timeZone".}
proc fcQDateTime_fromMSecsSinceEpochMsecs(msecs: clonglong): pointer {.importc: "QDateTime_fromMSecsSinceEpoch_msecs".}
proc fcQDateTime_fromSecsSinceEpochSecs(secs: clonglong): pointer {.importc: "QDateTime_fromSecsSinceEpoch_secs".}
proc fcQDateTime_currentMSecsSinceEpoch(): clonglong {.importc: "QDateTime_currentMSecsSinceEpoch".}
proc fcQDateTime_currentSecsSinceEpoch(): clonglong {.importc: "QDateTime_currentSecsSinceEpoch".}
proc fcQDateTime_setDateDateResolve(self: pointer, date: pointer, resolve: cint): void {.importc: "QDateTime_setDate_date_resolve".}
proc fcQDateTime_setTimeTimeResolve(self: pointer, time: pointer, resolve: cint): void {.importc: "QDateTime_setTime_time_resolve".}
proc fcQDateTime_setTimeZoneToZoneResolve(self: pointer, toZone: pointer, resolve: cint): void {.importc: "QDateTime_setTimeZone_toZone_resolve".}
proc fcQDateTime_toString_Qt_DateFormat(self: pointer, format: cint): struct_seaqt_string {.importc: "QDateTime_toString_Qt_DateFormat".}
proc fcQDateTime_fromString_QString_Qt_DateFormat(stringVal: struct_seaqt_string, format: cint): pointer {.importc: "QDateTime_fromString_QString_Qt_DateFormat".}
proc fcQDateTime_fromString_QString_QStringInt(stringVal: struct_seaqt_string, format: struct_seaqt_string, baseYear: cint): pointer {.importc: "QDateTime_fromString_QString_QString_int".}
proc fcQDateTime_fromMSecsSinceEpochMsecsSpecOffsetFromUtc(msecs: clonglong, spec: cint, offsetFromUtc: cint): pointer {.importc: "QDateTime_fromMSecsSinceEpoch_msecs_spec_offsetFromUtc".}
proc fcQDateTime_fromSecsSinceEpochSecsSpecOffsetFromUtc(secs: clonglong, spec: cint, offsetFromUtc: cint): pointer {.importc: "QDateTime_fromSecsSinceEpoch_secs_spec_offsetFromUtc".}
proc fcQDateTime_new(): ptr cQDateTime {.importc: "QDateTime_new".}
proc fcQDateTime_new2(date: pointer, time: pointer, spec: cint): ptr cQDateTime {.importc: "QDateTime_new_date_time_spec".}
proc fcQDateTime_new3(date: pointer, time: pointer, timeZone: pointer): ptr cQDateTime {.importc: "QDateTime_new_date_time_timeZone".}
proc fcQDateTime_new4(date: pointer, time: pointer): ptr cQDateTime {.importc: "QDateTime_new_date_time".}
proc fcQDateTime_new5(fromVal: pointer): ptr cQDateTime {.importc: "QDateTime_new_from".}
proc fcQDateTime_new6(date: pointer, time: pointer, spec: cint, offsetSeconds: cint): ptr cQDateTime {.importc: "QDateTime_new_date_time_spec_offsetSeconds".}
proc fcQDateTime_new7(date: pointer, time: pointer, timeZone: pointer, resolve: cint): ptr cQDateTime {.importc: "QDateTime_new_date_time_timeZone_resolve".}
proc fcQDateTime_new8(date: pointer, time: pointer, resolve: cint): ptr cQDateTime {.importc: "QDateTime_new_date_time_resolve".}

proc isNull*(self: gen_qdatetime_types.QDate): bool =
  fcQDate_isNull(self.h)

proc isValid*(self: gen_qdatetime_types.QDate): bool =
  fcQDate_isValid(self.h)

proc year*(self: gen_qdatetime_types.QDate): cint =
  fcQDate_year(self.h)

proc month*(self: gen_qdatetime_types.QDate): cint =
  fcQDate_month(self.h)

proc day*(self: gen_qdatetime_types.QDate): cint =
  fcQDate_day(self.h)

proc dayOfWeek*(self: gen_qdatetime_types.QDate): cint =
  fcQDate_dayOfWeek(self.h)

proc dayOfYear*(self: gen_qdatetime_types.QDate): cint =
  fcQDate_dayOfYear(self.h)

proc daysInMonth*(self: gen_qdatetime_types.QDate): cint =
  fcQDate_daysInMonth(self.h)

proc daysInYear*(self: gen_qdatetime_types.QDate): cint =
  fcQDate_daysInYear(self.h)

proc weekNumber*(self: gen_qdatetime_types.QDate): cint =
  fcQDate_weekNumber(self.h)

proc year*(self: gen_qdatetime_types.QDate, cal: gen_qcalendar_types.QCalendar): cint =
  fcQDate_yearCal(self.h, cal.h)

proc month*(self: gen_qdatetime_types.QDate, cal: gen_qcalendar_types.QCalendar): cint =
  fcQDate_monthCal(self.h, cal.h)

proc day*(self: gen_qdatetime_types.QDate, cal: gen_qcalendar_types.QCalendar): cint =
  fcQDate_dayCal(self.h, cal.h)

proc dayOfWeek*(self: gen_qdatetime_types.QDate, cal: gen_qcalendar_types.QCalendar): cint =
  fcQDate_dayOfWeekCal(self.h, cal.h)

proc dayOfYear*(self: gen_qdatetime_types.QDate, cal: gen_qcalendar_types.QCalendar): cint =
  fcQDate_dayOfYearCal(self.h, cal.h)

proc daysInMonth*(self: gen_qdatetime_types.QDate, cal: gen_qcalendar_types.QCalendar): cint =
  fcQDate_daysInMonthCal(self.h, cal.h)

proc daysInYear*(self: gen_qdatetime_types.QDate, cal: gen_qcalendar_types.QCalendar): cint =
  fcQDate_daysInYearCal(self.h, cal.h)

proc startOfDay*(self: gen_qdatetime_types.QDate, spec: cint): gen_qdatetime_types.QDateTime =
  gen_qdatetime_types.QDateTime(h: fcQDate_startOfDaySpec(self.h, cint(spec)), owned: true)

proc endOfDay*(self: gen_qdatetime_types.QDate, spec: cint): gen_qdatetime_types.QDateTime =
  gen_qdatetime_types.QDateTime(h: fcQDate_endOfDaySpec(self.h, cint(spec)), owned: true)

proc startOfDay*(self: gen_qdatetime_types.QDate, zone: gen_qtimezone_types.QTimeZone): gen_qdatetime_types.QDateTime =
  gen_qdatetime_types.QDateTime(h: fcQDate_startOfDayZone(self.h, zone.h), owned: true)

proc endOfDay*(self: gen_qdatetime_types.QDate, zone: gen_qtimezone_types.QTimeZone): gen_qdatetime_types.QDateTime =
  gen_qdatetime_types.QDateTime(h: fcQDate_endOfDayZone(self.h, zone.h), owned: true)

proc startOfDay*(self: gen_qdatetime_types.QDate): gen_qdatetime_types.QDateTime =
  gen_qdatetime_types.QDateTime(h: fcQDate_startOfDay(self.h), owned: true)

proc endOfDay*(self: gen_qdatetime_types.QDate): gen_qdatetime_types.QDateTime =
  gen_qdatetime_types.QDateTime(h: fcQDate_endOfDay(self.h), owned: true)

proc toString*(self: gen_qdatetime_types.QDate): string =
  let v_ms = fcQDate_toString(self.h)
  let vx_ret = string.fromBytes(v_ms)
  c_free(v_ms.data)
  vx_ret

proc toString*(self: gen_qdatetime_types.QDate, format: openArray[char]): string =
  let v_ms = fcQDate_toString_QString(self.h, struct_seaqt_string(data: if len(format) > 0: addr format[0] else: nil, len: csize_t(len(format))))
  let vx_ret = string.fromBytes(v_ms)
  c_free(v_ms.data)
  vx_ret

proc toString*(self: gen_qdatetime_types.QDate, format: openArray[char], cal: gen_qcalendar_types.QCalendar): string =
  let v_ms = fcQDate_toString_QString_QCalendar(self.h, struct_seaqt_string(data: if len(format) > 0: addr format[0] else: nil, len: csize_t(len(format))), cal.h)
  let vx_ret = string.fromBytes(v_ms)
  c_free(v_ms.data)
  vx_ret

proc setDate*(self: gen_qdatetime_types.QDate, year: cint, month: cint, day: cint): bool =
  fcQDate_setDateYearMonthDay(self.h, year, month, day)

proc setDate*(self: gen_qdatetime_types.QDate, year: cint, month: cint, day: cint, cal: gen_qcalendar_types.QCalendar): bool =
  fcQDate_setDateYearMonthDayCal(self.h, year, month, day, cal.h)

proc getDate*(self: gen_qdatetime_types.QDate, year: ptr cint, month: ptr cint, day: ptr cint): void =
  fcQDate_getDate(self.h, year, month, day)

proc addDays*(self: gen_qdatetime_types.QDate, days: clonglong): gen_qdatetime_types.QDate =
  gen_qdatetime_types.QDate(h: fcQDate_addDays(self.h, days), owned: true)

proc addMonths*(self: gen_qdatetime_types.QDate, months: cint): gen_qdatetime_types.QDate =
  gen_qdatetime_types.QDate(h: fcQDate_addMonthsMonths(self.h, months), owned: true)

proc addYears*(self: gen_qdatetime_types.QDate, years: cint): gen_qdatetime_types.QDate =
  gen_qdatetime_types.QDate(h: fcQDate_addYearsYears(self.h, years), owned: true)

proc addMonths*(self: gen_qdatetime_types.QDate, months: cint, cal: gen_qcalendar_types.QCalendar): gen_qdatetime_types.QDate =
  gen_qdatetime_types.QDate(h: fcQDate_addMonthsMonthsCal(self.h, months, cal.h), owned: true)

proc addYears*(self: gen_qdatetime_types.QDate, years: cint, cal: gen_qcalendar_types.QCalendar): gen_qdatetime_types.QDate =
  gen_qdatetime_types.QDate(h: fcQDate_addYearsYearsCal(self.h, years, cal.h), owned: true)

proc daysTo*(self: gen_qdatetime_types.QDate, d: gen_qdatetime_types.QDate): clonglong =
  fcQDate_daysTo(self.h, d.h)

proc currentDate*(_: type gen_qdatetime_types.QDate): gen_qdatetime_types.QDate =
  gen_qdatetime_types.QDate(h: fcQDate_currentDate(), owned: true)

proc fromString*(_: type gen_qdatetime_types.QDate, stringVal: openArray[char]): gen_qdatetime_types.QDate =
  gen_qdatetime_types.QDate(h: fcQDate_fromString_QString(struct_seaqt_string(data: if len(stringVal) > 0: addr stringVal[0] else: nil, len: csize_t(len(stringVal)))), owned: true)

proc fromString*(_: type gen_qdatetime_types.QDate, stringVal: openArray[char], format: openArray[char], cal: gen_qcalendar_types.QCalendar): gen_qdatetime_types.QDate =
  gen_qdatetime_types.QDate(h: fcQDate_fromString_QString_QString_QCalendar(struct_seaqt_string(data: if len(stringVal) > 0: addr stringVal[0] else: nil, len: csize_t(len(stringVal))), struct_seaqt_string(data: if len(format) > 0: addr format[0] else: nil, len: csize_t(len(format))), cal.h), owned: true)

proc fromString*(_: type gen_qdatetime_types.QDate, stringVal: openArray[char], format: openArray[char]): gen_qdatetime_types.QDate =
  gen_qdatetime_types.QDate(h: fcQDate_fromString_QString_QString(struct_seaqt_string(data: if len(stringVal) > 0: addr stringVal[0] else: nil, len: csize_t(len(stringVal))), struct_seaqt_string(data: if len(format) > 0: addr format[0] else: nil, len: csize_t(len(format)))), owned: true)

proc fromString*(_: type gen_qdatetime_types.QDate, stringVal: openArray[char], format: openArray[char], baseYear: cint, cal: gen_qcalendar_types.QCalendar): gen_qdatetime_types.QDate =
  gen_qdatetime_types.QDate(h: fcQDate_fromString_QString_QStringInt_QCalendar(struct_seaqt_string(data: if len(stringVal) > 0: addr stringVal[0] else: nil, len: csize_t(len(stringVal))), struct_seaqt_string(data: if len(format) > 0: addr format[0] else: nil, len: csize_t(len(format))), baseYear, cal.h), owned: true)

proc isValid*(_: type gen_qdatetime_types.QDate, y: cint, m: cint, d: cint): bool =
  fcQDate_isValidYMD(y, m, d)

proc isLeapYear*(_: type gen_qdatetime_types.QDate, year: cint): bool =
  fcQDate_isLeapYear(year)

proc fromJulianDay*(_: type gen_qdatetime_types.QDate, jd_x: clonglong): gen_qdatetime_types.QDate =
  gen_qdatetime_types.QDate(h: fcQDate_fromJulianDay(jd_x), owned: true)

proc toJulianDay*(self: gen_qdatetime_types.QDate): clonglong =
  fcQDate_toJulianDay(self.h)
